[package]
name = "neo-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.0"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
tokio = { version = "1.51.1", features = ["full"]}
tower-http = "0.6.8"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
validator = "0.20.0"
