[package]
name = "neo-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.51.1", features = ["full"]}
tower = { version = "0.5.3", features = ["limit", "buffer"] }
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
validator = "0.20.0"
